--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,3 +2,9 @@
   max-width: 400px;
   margin: 0 auto;
 }
+
+.title {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 33px;
+}
