--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="courses-panel">
-  <h3>All Courses</h3>
+  <h3 class="title">All Courses</h3>
 
   <mat-tab-group>
     <mat-tab label="Beginners">
