--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -2,20 +2,25 @@
   <div class="course">
     <h2>{{ data.course?.description }}</h2>
 
-    <img class="course-thumbnail" [src]="data.course?.iconUrl" />
+    <img
+      class="course-thumbnail"
+      [src]="data.course?.iconUrl"
+      *ngIf="data.course"
+      alt="photo"
+    />
 
-    <table class="lessons-table mat-elevation-z7">
+    <table class="lessons-table mat-elevation-z7" *ngIf="data.lessons">
       <thead>
         <th>#</th>
         <th>Description</th>
         <th>Duration</th>
       </thead>
-      <!--
-      <tr class="lesson-row" *ngFor="let lesson of data.lessons">
+
+      <tr class="lesson-row" *ngFor="let lesson of data.lessons.payload">
         <td class="seqno-cell">{{ lesson.seqNo }}</td>
         <td class="description-cell">{{ lesson.description }}</td>
         <td class="duration-cell">{{ lesson.duration }}</td>
-      </tr> -->
+      </tr>
     </table>
   </div>
 </ng-container>
